2006-09-21  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/tweaks.itely (Fitting music onto fewer
	pages): change settings to avoid warning messages.

2006-09-21  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/tweaks.itely (Fitting music onto fewer
	pages): Add between-system-space setting. 

2006-09-21  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/accidental-placement.cc (calc_positioning_done): don't
	trigger Y-extent calculation too early. Use pure_height instead.

	* lily/scale.cc (LY_DEFINE): new file. 

2006-09-20  Joe Neeman  <joeneeman@gmail.com>

	* lily/page-breaking.cc (find_chunks_and_breaks): ignore breaks
	that happen at the start of a score: having a zero-length
	chunk was messing up min_system_count calculations.

	* lily/source-file.cc (get_line): lower_bound, not
	binary_search. Fixes problem where point-and-click would
	always point to the first line.

2006-09-20  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/accidental-placement.cc (calc_positioning_done): also put
	stems into accidental support. 

	* lily/tie-engraver.cc (process_music): also set tieMelismaBusy if
	event_ detected.

	* scm/script.scm (default-script-alist): avoid-slur and
	slur-padding for portato script.

	* lily/stem-tremolo.cc (translated_stencil): new function. 
	(height): use new function. Fixes tremolos on whole notes.

	* lily/slur-scoring.cc (get_best_curve): don't crash if no optimal
	slur found.

2006-09-19  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scripts/abc2ly.py (try_parse_comment): idem.

	* scripts/lilypond-book.py (find_toplevel_snippets): use 'foo' in
	bar_string iso. string.find()

	* lily/*.cc: idem.

	* lily/slur.cc (get_curve): always use scm_is_pair() looping
	scheme lists.  

2006-09-18  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/basic-notation.itely: add bug
	warning about ties and octavation/clef.

2006-09-18  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* VERSION (PACKAGE_NAME): release 2.9.18
